# computer-vision

./: Makefile  README.md  setup.cfg
src/classification/modelling/: datasets.py  metrics.py  models.py
src/classification/operations/: train.py
src/preprocessing/: Makefile  kfold.py  preprocessing.py
src/utilities/: seed_everything.py
tasks/: train.py
