[metadata]
name = ml_mac
version = 1.0.7
description = A ML project on Macbook Pro M1 Pro
long_description = file: README.md

[options]
packages = find:
package_dir =
    =src

install_requires =
    pandas
    scikit-learn
    albumentations
    opencv-python-headless
    timm
    fire
    wandb
    transformers
    matplotlib
    torch
    pytorch-lightning
    torchvision

[options.packages.find]
where = src
exclude = preprocessing
